--- a/StarTrivia/Base.lproj/Main.storyboard
+++ b/StarTrivia/Base.lproj/Main.storyboard
@@ -187,10 +187,72 @@
                                     <action selector="randomClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iJN-2Z-VSd"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zI8-iO-6hV" customClass="BlackBgButton" customModule="StarTrivia" customModuleProvider="target">
+                                <rect key="frame" x="20" y="595.5" width="374" height="75"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="nsm-Bp-nab">
+                                        <rect key="frame" x="20" y="20" width="334" height="35"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eZT-6p-FgX">
+                                                <rect key="frame" x="0.0" y="0.0" width="35" height="35"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="35" id="JiD-4K-rb4"/>
+                                                    <constraint firstAttribute="height" constant="35" id="afT-aA-a7l"/>
+                                                </constraints>
+                                                <state key="normal" image="homeworld_icon"/>
+                                                <connections>
+                                                    <action selector="homeworldClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mL0-X4-j9a"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oT9-vc-WbN">
+                                                <rect key="frame" x="99.5" y="0.0" width="35" height="35"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="35" id="1eK-CU-ryT"/>
+                                                    <constraint firstAttribute="width" constant="35" id="Dhs-dQ-Gd9"/>
+                                                </constraints>
+                                                <state key="normal" image="vehicles"/>
+                                                <connections>
+                                                    <action selector="vehiclesClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0ug-G9-Wq4"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3bA-MY-qcD">
+                                                <rect key="frame" x="199.5" y="0.0" width="35" height="35"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="35" id="9Tb-6c-WGk"/>
+                                                    <constraint firstAttribute="height" constant="35" id="JTd-96-mGI"/>
+                                                </constraints>
+                                                <state key="normal" image="starships"/>
+                                                <connections>
+                                                    <action selector="starshipsClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4Sp-Wm-IZg"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="trT-jO-bbC">
+                                                <rect key="frame" x="299" y="0.0" width="35" height="35"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="35" id="65U-EF-j5y"/>
+                                                    <constraint firstAttribute="width" constant="35" id="rUN-ZF-WVW"/>
+                                                </constraints>
+                                                <state key="normal" image="films"/>
+                                                <connections>
+                                                    <action selector="filmsClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QTl-wq-arW"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="75" id="0k7-RJ-RP8"/>
+                                    <constraint firstItem="nsm-Bp-nab" firstAttribute="centerY" secondItem="zI8-iO-6hV" secondAttribute="centerY" id="I3a-is-768"/>
+                                    <constraint firstAttribute="trailing" secondItem="nsm-Bp-nab" secondAttribute="trailing" constant="20" id="KVB-4g-6q5"/>
+                                    <constraint firstItem="nsm-Bp-nab" firstAttribute="leading" secondItem="zI8-iO-6hV" secondAttribute="leading" constant="20" id="cjK-Nb-eqT"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3Wo-pD-M9c" secondAttribute="trailing" constant="20" id="7xb-sF-qHY"/>
+                            <constraint firstItem="zI8-iO-6hV" firstAttribute="top" secondItem="3Wo-pD-M9c" secondAttribute="bottom" constant="20" id="BFM-pJ-eQn"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="d7c-vT-65v" secondAttribute="trailing" constant="20" id="CP6-Dj-u2a"/>
                             <constraint firstItem="cLE-Zx-Fb1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Dir-Se-yx1"/>
                             <constraint firstItem="3Wo-pD-M9c" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="DnC-AG-v5w"/>
@@ -199,6 +261,8 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="cLE-Zx-Fb1" secondAttribute="bottom" constant="30" id="Rij-YB-BIe"/>
                             <constraint firstItem="d7c-vT-65v" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="adE-KU-86Z"/>
                             <constraint firstItem="fW9-fb-ebM" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="bvz-oM-wXQ"/>
+                            <constraint firstItem="zI8-iO-6hV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cAa-bU-7Ew"/>
+                            <constraint firstItem="zI8-iO-6hV" firstAttribute="width" secondItem="3Wo-pD-M9c" secondAttribute="width" id="lEp-M4-OvS"/>
                             <constraint firstAttribute="bottom" secondItem="fW9-fb-ebM" secondAttribute="bottom" id="mLx-E7-LrB"/>
                             <constraint firstItem="fW9-fb-ebM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ree-MK-6Dn"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fW9-fb-ebM" secondAttribute="trailing" id="tn8-7D-YRO"/>
@@ -209,11 +273,15 @@
                     <navigationItem key="navigationItem" id="xYy-Un-64L"/>
                     <connections>
                         <outlet property="birthYearLabel" destination="z5h-df-14z" id="9cA-EU-KMv"/>
+                        <outlet property="filmsButton" destination="trT-jO-bbC" id="VhG-cy-DSr"/>
                         <outlet property="genderLabel" destination="UqZ-8D-r8B" id="nIr-Hy-hYI"/>
                         <outlet property="hairLabel" destination="lLX-vd-EkJ" id="Hfv-U4-hkD"/>
                         <outlet property="heightLabel" destination="9hL-4f-UCN" id="nr9-70-LtB"/>
+                        <outlet property="homeworldButton" destination="eZT-6p-FgX" id="w2Z-vE-Szp"/>
                         <outlet property="massLabel" destination="D2R-ia-TTI" id="BL2-0N-g55"/>
                         <outlet property="nameLabel" destination="7bt-di-7zt" id="wr7-h1-Y05"/>
+                        <outlet property="starshipsButton" destination="3bA-MY-qcD" id="0Td-Ob-R71"/>
+                        <outlet property="vehiclesButton" destination="oT9-vc-WbN" id="kZ8-oO-TVk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -240,6 +308,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="films" width="50" height="50"/>
+        <image name="homeworld_icon" width="50" height="50"/>
         <image name="space1" width="699" height="1120"/>
+        <image name="starships" width="50" height="50"/>
+        <image name="vehicles" width="50" height="50"/>
     </resources>
 </document>
