--- a/StarTrivia/Base.lproj/Main.storyboard
+++ b/StarTrivia/Base.lproj/Main.storyboard
@@ -184,10 +184,10 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <action selector="randomClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iJN-2Z-VSd"/>
+                                    <action selector="randomClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pxc-3K-DUe"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zI8-iO-6hV" customClass="BlackBgButton" customModule="StarTrivia" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zI8-iO-6hV" customClass="BlackBgView" customModule="StarTrivia" customModuleProvider="target">
                                 <rect key="frame" x="20" y="595.5" width="374" height="75"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="nsm-Bp-nab">
@@ -201,7 +201,6 @@
                                                 </constraints>
                                                 <state key="normal" image="homeworld_icon"/>
                                                 <connections>
-                                                    <action selector="homeworldClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mL0-X4-j9a"/>
                                                     <segue destination="RoT-gv-LIl" kind="show" identifier="toHomeworld" id="r5I-vq-kBX"/>
                                                 </connections>
                                             </button>
@@ -213,7 +212,6 @@
                                                 </constraints>
                                                 <state key="normal" image="vehicles"/>
                                                 <connections>
-                                                    <action selector="vehiclesClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0ug-G9-Wq4"/>
                                                     <segue destination="lOe-t3-0uT" kind="show" identifier="toVehicles" id="JbO-Bi-lzx"/>
                                                 </connections>
                                             </button>
@@ -225,7 +223,6 @@
                                                 </constraints>
                                                 <state key="normal" image="starships"/>
                                                 <connections>
-                                                    <action selector="starshipsClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4Sp-Wm-IZg"/>
                                                     <segue destination="rzl-eE-KYb" kind="show" identifier="toStarships" id="Cqf-Qx-EkW"/>
                                                 </connections>
                                             </button>
@@ -237,7 +234,6 @@
                                                 </constraints>
                                                 <state key="normal" image="films"/>
                                                 <connections>
-                                                    <action selector="filmsClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QTl-wq-arW"/>
                                                     <segue destination="ras-K1-fPA" kind="show" identifier="toFilms" id="3S4-Vm-bkM"/>
                                                 </connections>
                                             </button>
@@ -290,7 +286,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="64" y="116"/>
+            <point key="canvasLocation" x="63.768115942028992" y="115.84821428571428"/>
         </scene>
         <!--StarshipsVC-->
         <scene sceneID="DI1-km-U00">
